Bug/client admin 12 long gap between after media blocks (#13) (#14)
* remove commented part of test and deploy workflow

* add standalone input to media view

* use non standalone media view in article

--- a/client/projects/admin/src/app/features/media/view/media-view.component.scss
+++ b/client/projects/admin/src/app/features/media/view/media-view.component.scss
@@ -1,6 +1,9 @@
 .media-view {
   box-sizing: border-box;
   height: 100%;
+  &--integrated {
+    height: auto;
+  }
   &__content,
   &__content:last-child,
   &__content:first-child {
